--- a/cpan/pod/Deprecated/NAIF/Semantics/Phases.pod
+++ b/cpan/pod/Deprecated/NAIF/Semantics/Phases.pod
@@ -15,7 +15,13 @@
 
 =head1 NAME
 
-Marpa::R2::NAIF::Semantics::Phases - Details of NAIF parse evaluation
+Marpa::R2::Deprecated::NAIF::Semantics::Phases - Details of NAIF parse evaluation
+
+=head1 THE NAIF INTERFACE IS DEPRECATED
+
+This document describes the NAIF interface,
+which is deprecated.
+PLEASE DO NOT USE IT FOR NEW DEVELOPMENT.
 
 =head1 Overview of the semantic phases
 
@@ -53,19 +59,19 @@ a series of zero or more parse trees,
 each with its own parse result.
 The first call to the
 L<the recognizer's C<value>
-method|Marpa::R2::NAIF::Recognizer/"value()">
+method|Marpa::R2::Deprecated::NAIF::Recognizer/"value()">
 after the recognizer is created is the
 start of the first parse series.
 The first parse series continues until there is
 a call to the
 L<the C<reset_evaluation>
-method|Marpa::R2::NAIF::Recognizer/"reset_evaluation()">
+method|Marpa::R2::Deprecated::NAIF::Recognizer/"reset_evaluation()">
 or until the recognizer is destroyed.
 Usually, an application is only interested in a single
 parse series.
 
 When the
-L<C<reset_evaluation>|Marpa::R2::NAIF::Recognizer/"reset_evaluation()">
+L<C<reset_evaluation>|Marpa::R2::Deprecated::NAIF::Recognizer/"reset_evaluation()">
 method
 is called
 for a recognizer, it begins a new parse series.
@@ -73,7 +79,7 @@ The new parse series continues until
 there is another
 call to the
 L<the C<reset_evaluation>
-method|Marpa::R2::NAIF::Recognizer/"reset_evaluation()">,
+method|Marpa::R2::Deprecated::NAIF::Recognizer/"reset_evaluation()">,
 or until the recognizer is destroyed.
 
 =head1 Summary of the phases
