--- a/cpan/pod/Deprecated/NAIF/Tracing.pod
+++ b/cpan/pod/Deprecated/NAIF/Tracing.pod
@@ -15,7 +15,13 @@
 
 =head1 NAME
 
-Marpa::R2::NAIF::Tracing - Tracing a NAIF grammar
+Marpa::R2::Deprecated::NAIF::Tracing - Tracing a NAIF grammar
+
+=head1 THE NAIF INTERFACE IS DEPRECATED
+
+This document describes the NAIF interface,
+which is deprecated.
+PLEASE DO NOT USE IT FOR NEW DEVELOPMENT.
 
 =head1 Description
 
@@ -81,7 +87,7 @@ C<show_progress>
 should provide all the
 information necessary to
 debug an application's grammar.
-L<A separate document|Marpa::R2::NAIF::Progress>
+L<A separate document|Marpa::R2::Deprecated::NAIF::Progress>
 explains how to interpret the progress reports.
 That document includes an
 example of the use of C<show_progress>
