--- a/cpan/pod/Deprecated/Stuifzand.pod
+++ b/cpan/pod/Deprecated/Stuifzand.pod
@@ -15,7 +15,13 @@
 
 =head1 Name
 
-Marpa::R2::BNF - BNF Interface (obsoleted)
+Marpa::R2::Deprecated::Stuifzand - Stuifzand Interface (DEPRECATED)
+
+=head1 THE STUIFZAND INTERFACE IS DEPRECATED
+
+The Stuifzand interface (also sometimes called the "BNF interface")
+is deprecated.
+PLEASE DO NOT USE IT FOR NEW DEVELOPMENT.
 
 =head1 Synopsis
 
@@ -49,9 +55,9 @@ normalize-whitespace: 1
 
 =head1 Overview
 
-This page is the reference for the Marpa's "BNF interface",
-also called its "Stuifzand interface".
-Use of the Stuifzand interface is now discouraged,
+This page is the reference for the Marpa's "Stuifzand interface",
+also called its "BNF interface".
+Use of the Stuifzand interface is now deprecated,
 in favor of L<the SLIF
 interface|Marpa::R2::Scanless>.
 Almost all of the functionality of
@@ -69,12 +75,12 @@ itself|Marpa::R2::Scanless>.
 =head1 The source string
 
 Stuifzand interface  source strings are specified using the 
-L<the C<source> named argument of Marpa::R2's grammars|Marpa::R2::NAIF::Grammar/"source">.
+L<the C<source> named argument of Marpa::R2's grammars|Marpa::R2::Deprecated::NAIF::Grammar/"source">.
 BNF source strings perform the functions of
 the
-L<C<rules>|Marpa::R2::NAIF::Grammar/"rules">
+L<C<rules>|Marpa::R2::Deprecated::NAIF::Grammar/"rules">
 and the
-L<C<start>|Marpa::R2::NAIF::Grammar/"start">
+L<C<start>|Marpa::R2::Deprecated::NAIF::Grammar/"start">
 named arguments of Marpa grammars.
 When
 the C<source> named argument is used to specify a grammar,
