--- a/cpan/pod/Semantics.pod
+++ b/cpan/pod/Semantics.pod
@@ -470,12 +470,20 @@ array.
 
 =over 4
 
-=item C<g1length>
+=item C<g1len>
 
-The C<g1length> array item descriptor puts
+The C<g1len> array item descriptor puts
 a single-element list into the array.
 That one element will be the length of the rule or lexeme instance,
 in G1 locations.
+
+=item C<g1length>
+
+THE C<g1length> ARRAY ITEM DESCRIPTOR IS DEPRECATED.
+It exists for hostirical reasons.
+The C<g1length> array item descriptor puts
+a single-element list into the array.
+That one element is C<g1len> plus one.
 
 =item C<g1start>
 
@@ -1011,11 +1019,8 @@ on parse order|Marpa::R2::Semantics::Order>.
 Grammars with infinite loops (cycles)
 are generally regarded as useless in practical applications.
 Due to lack of interest,
-the SLIF does not currently support them,
-although Libmarpa itself, Marpa's thin interface and the NAIF all do.
-Those interested in knowing more can look at L<the
-document on the NAIF's support of infinitely ambiguous
-grammars|Marpa::R2::NAIF::Semantics::Infinite>.
+the SLIF does not support them,
+although Libmarpa itself and Marpa's thin interface do.
 
 =head1 Copyright and License
 
